# blank_cmake

./: CMakeLists.txt
include/: main.h
src/: main.c
